<pre>
2007-XX-XX:
	* version 0.5.3
	* new :pa[geinfo] command, and ctrl-g and g, ctrl-g mappings (thanks Marco Candrian)
	* IMPORTANT! options are no longer automatically stored - use the
	  ~/.vimperatorrc file instead for persistent options
	* added new :mkvimperatorc command
	* remove :redraw and Ctrl-L commands as they rely on FF3 features
	* :ls, :history and :bmarks output is now hyperlinked
	* new gb and gB mappings to repeat the last :buffer[!] command,
	* :q doesn't close the whole browser, if there are more than one windows
	* new :winclose command
	* b calls :buffer! now instead of :buffer
	* [+], [-] and [+-] in the statusline, whether we can go back, forward, or both
	* :set showtabline now finally works as expected for all values

2007-10-11:
	* version 0.5.2
	* changed semantics of :set[!] and :prefs[!] a little, :set shows now all non-default
	  options, use :prefs! to get the about:config window
	* added "s" and "a" mappings to extended hints mode for saving hint targets
	* "d", "D" and :bdelete support count now
	* :back/:forward can use tabcompletion
	* :undoall support, and tabcompletion for :undo <tab>
	* new :redraw and Ctrl-L commands for forced redrawing of the screen
	* added new 'laststatus' option and removed "s" value from 'guioptions'
	* Tab-completion improvements for :javascript and :open
	* IMPORTANT: changed semantics of :echo and :echoerr: Strings must be quoted with " or ' now,
	  but you can do things like :echo 3+2 or :echo window.document now
	* statusline is now white on black with bold font by default (like in (g)vim)
	  (change with userChrome.css if you don't like it until we have :colorscheme)
	* :let mapleader=","  and <Leader> in :map support
	* added new :let and :unlet commands
	* :b2 now allowed, no space required before the 2 anymore
	* :! to run commands through system()
	* separated search and Ex command history
	* added 'visualbellstyle' for styling/hiding the visual bell